# template-config-model

./: .gitignore  ChangeLog  Makefile  Pipfile  README.md  configure.sh  index.md  mkdocs.yaml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: main.yaml
config/: Pipfile  README.md  configure.py
config/templates/: setup.py
config/templates/.github/workflows/: main.yaml
docs/: 404.html  index.html  search.html  sitemap.xml
docs/Boolean/: index.html
docs/Component/: index.html
docs/Config/: index.html
docs/String/: index.html
docs/config__classifiers/: index.html
docs/config__generate/: index.html
docs/config__keywords/: index.html
docs/config__model_author/: index.html
docs/config__model_author_email/: index.html
docs/config__model_description/: index.html
docs/config__model_name/: index.html
docs/config__model_organization/: index.html
docs/config__model_py_name/: index.html
docs/config__model_root_class/: index.html
docs/config__model_synopsis/: index.html
docs/config__model_url/: index.html
docs/config__root_schema/: index.html
docs/credits/: index.html
docs/home/: index.html
docs/search/: search_index.json
model/docs/: home.md
model/schema/: config_model.yaml
template_config_model/: config_model.py
template_config_model/jsonld/: config_model.context.jsonld  config_model.model.context.jsonld
template_config_model/jsonschema/: config_model.schema.json
template_config_model/model/schema/: config_model.yaml
tests/: test_input_against_model.py
tests/input/: CONFIG.yaml
