[metadata]
name = template_config_model
url = https://github.com/linkml/template-config-model
author = Harold Solbrig
author-email = solbrig@jhu.edu
summary = Configuration parameters for LinkML model generation
home-page = https://linkml.github.io/template_config_model
license = CC0 1.0 Universal
python-requires = >=3.7
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = 
    linkml
    LOD
    Modeling
    Linked open data
    model

[options]
include_package_data = True

[files]
packages =
    template_config_model

data-files = template_config_model/model = template_config_model/model/*
    template_config_model/jsonld_context = template_config_model/jsonld_context/*
    template_config_model/json_schema = template_config_model/json_schema/*


